Upgrade to JDK17 and Stabilize Tests - MEED-1666 (#105)